--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -12,7 +12,17 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="48dp"/>
+        android:layout_height="48dp">
+
+        <TextView
+            android:id="@+id/title"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textSize="32sp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <FrameLayout
