--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -38,5 +38,22 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"/>
 
+    <!--   需要用到进度条的时候出现就好啦   -->
+    <FrameLayout
+        android:id="@+id/loading"
+        android:visibility="gone"
+        android:background="#99ffffff"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@style/AppTheme"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
