--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,11 @@
         android:layout_height="match_parent"/>
 
     <FrameLayout
+        android:id="@+id/fragment_root"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <FrameLayout
         android:id="@+id/exception_fl"
         android:visibility="gone"
         android:layout_width="match_parent"
