--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -15,11 +15,33 @@
         android:layout_height="48dp">
 
         <TextView
+            android:id="@+id/tv_left_tl"
+            android:text="返回"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
+        <TextView
             android:id="@+id/title"
             android:gravity="center"
             android:text="@string/app_name"
             android:textSize="32sp"
-            android:layout_width="match_parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
+        <TextView
+            android:id="@+id/tv_right_tl"
+            app:layout_constraintRight_toRightOf="parent"
+            android:text="更多"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
